SET(INCLUDE_DIRS
  ${PROJECT_SOURCE_DIR}
  ${PROJECT_BINARY_DIR}
)

SET(SOURCES
  lv-tool.cpp
  display/display.cpp
  display/display_driver_factory.cpp
  display/stdout_driver.cpp
)

SET(LINK_LIBS "")
SET(LINK_DIRS "")

# SDL driver
IF(HAVE_SDL)
  LIST(APPEND SOURCES display/sdl_driver.cpp)
  LIST(APPEND INCLUDE_DIRS ${SDL_INCLUDE_DIR})
  LIST(APPEND LINK_LIBS ${SDL_LIBRARY})
ENDIF()

# OSMesa support for stdout driver
IF(HAVE_GL AND HAVE_OSMESA)
  LIST(APPEND INCLUDE_DIRS ${OSMESA_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR})
  LIST(APPEND LINK_LIBS ${OSMESA_LIBRARIES} ${OPENGL_gl_LIBRARY})
  LIST(APPEND LINK_DIRS ${OSMESA_LIBRARY_DIRS})
ENDIF()

INCLUDE_DIRECTORIES(${INCLUDE_DIRS})
LINK_DIRECTORIES(${LINK_DIRS})

ADD_EXECUTABLE(lv-tool ${SOURCES})

TARGET_LINK_LIBRARIES(lv-tool
  libvisual
  ${LINK_LIBS}
)

INSTALL(TARGETS lv-tool RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
